# ff_backend

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  llm.py  main.py  prompts.py  recommendations.py  routes.py  schemas.py  storage.py  workflow.py
docs/: frontend_integration.md  or.md  prompt.md  schema.md  upgraded_endpoint.md
scripts/: analyze_face.py  products.csv  test_task_flow.py
tests/: test_app.py
